portal re looking
git-svn-id: https://10.8.37.111/svn/jahia/trunk/modules/portal@37021 69c369ed-ed09-0410-a4a1-e19a46c23626

--- a/src/main/webapp/css/portal.css
+++ b/src/main/webapp/css/portal.css
@@ -1,5 +1,5 @@
 /* Colors */
-.color-box {background:#7B7B7B;}
+.color-box {background:#99BBE8;}
 .color-yellow {background:#f2bc00;}
 .color-red    {background:#dd0000;}
 .color-blue   {background:#3366CC;}
